# SmartPharmacy

./: .env.dev  .gitignore  Dockerfile  README.txt  docker-compose.yml  manage.py  pyproject.toml
Front/: .env  package-lock.json  package.json
Front/public/: index.html  manifest.json  report.rdlx-json
Front/src/: App.js  index.css  index.html  index.js  routes.js  trash.html
Front/src/Header/: Header.js
Front/src/RegistrationModal/: RegistrationModal.js
Front/src/Search/: Search.js
Front/src/components/: AppRouter.js  LoadingModule.jsx  MapModule.jsx  MedicineList.jsx  Pages.jsx  PaginationModule.jsx
Front/src/components/api/: ProductAPI.js  UserAPI.js  index.js
Front/src/components/http/: ProductAPI.js  UserAPI.js
Front/src/components/pages/: Auth.js  Modal.css
Front/src/components/pages/admin/: AdminPage.css  AdminPage.jsx  ChainTableModule.jsx  ReportPage.jsx  UserTableModule.jsx
Front/src/components/pages/auth/: AuthPage.jsx  UpdateUserInfoPage.jsx
Front/src/components/store/: CategoryStorage.js  ChainStorage.js  FavoriteProductStorage.js  ProductStorage.js  ProductStore.js  User.js  UserStore.js
Front/src/components/utils/: Consts.js  index.js
MainApp/: Auth.py  apps.py  models.py  scrabing_pharmacy.py  serializers.py  urls.py  views.py
MainApp/migrations/: 0001_initial.py  0002_alter_medicines_release_form.py  0003_requests.py  0004_alter_requests_date_symptoms_chainqueue.py  0005_comments_date_medicines_image_alter_requests_date.py
SmartPharmacy/: asgi.py  settings.py  urls.py  wsgi.py
redis-data/: dump.rdb
(+16 files in other folders)
