[tool.poetry]
name = "smartpharmacy"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.13"
django = "^4.2.7"
django-cors-headers = "^4.3.0"
djangorestframework = "^3.14.0"
djangorestframework-jwt = "^1.11.0"
psycopg2 = "^2.9.9"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
selenium = "^4.16.0"
celery = "^5.3.6"
redis = "^5.0.1"
gunicorn = "^21.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
